test/02.test-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-pod
  namespace: test
  labels:
    test: pod
spec:
  replicas: 2
  selector:
    matchLabels:
      test: nginx
  template:
    metadata:
      labels:
        test: nginx
        statefulset: ""
    spec:
      nodeSelector:
        node-role.kubernetes.io/infra: ""
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/infra
        operator: Exists
      containers:
      - name: nginx-test
        image: skt-bssocpdargst.devocp1-416.sktelecom.com:5016/library/nginx:stable-alpine3.20-perl
        command:
        - /bin/sh
        - -c
        - echo -e "\nThis is pod $(hostname)\n;" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;' 
        securityContext:
          privileged: true
