test/03.test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-app-ocp
  namespace: test
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 80
    nodePort: 31100
  selector:
    test: nginx
  type: NodePort
