test/05.test-route-multipath.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  name: test-nginx-app-ocp
  namespace: test
spec:
  host: www.test-nginx.apps.devocp1-416.sktelecom.com
  rules:
    - path: /test1
      backend:
        service:
          name: test1
          port:
            number: 80
    - path: /test2
      backend:
        service:
          name: test2
          port:
            number: 80
