test/07.test-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-1-nginx-app-ocp
  namespace: test-1
spec:
  ports:
  - name: web-1
    port: 8080
    protocol: TCP
    targetPort: 80
    nodePort: 30001
  selector:
    test: nginx1
  type: NodePort
