test/nettool.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-network1
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-network2
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-network3
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops    
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nettool1
  namespace: test-network1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nettool1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nettool1
    spec:
      containers:
        - name: nettool1
          image: 'github.com/praqma/network-multitool:openshift'
          ports:
            - containerPort: 1180
              protocol: TCP
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nettool2
  namespace: test-network2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nettool2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nettool2
    spec:
      containers:
        - name: nettool2
          image: 'github.com/praqma/network-multitool:openshift'
          ports:
            - containerPort: 1180
              protocol: TCP
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nettool3
  namespace: test-network3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nettool3
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nettool3
    spec:
      containers:
        - name: nettool3
          image: 'github.com/praqma/network-multitool:openshift'
          ports:
            - containerPort: 1180
              protocol: TCP              
---
apiVersion: v1
kind: Service
metadata:
  name: service-nettool1
  namespace: test-network1
spec:
  type: NodePort
  selector:
    app: nettool1
  ports:
    - protocol: TCP
      port: 1180
      targetPort: 1180
      nodePort: 30081
---
apiVersion: v1
kind: Service
metadata:
  name: service-nettool2
  namespace: test-network2
spec:
  type: NodePort
  selector:
    app: nettool2
  ports:
    - protocol: TCP
      port: 1180
      targetPort: 1180
      nodePort: 30082    
--- 
apiVersion: v1
kind: Service
metadata:
  name: service-nettool3
  namespace: test-network3
spec:
  type: NodePort
  selector:
    app: nettool3
  ports:
    - protocol: TCP
      port: 1180
      targetPort: 1180
      nodePort: 30083    
---       
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-nettool1
  namespace: test-network1
  labels:
    app.kubernetes.io/instance: nettool1
spec:
  to:
    kind: Service
    name: service-nettool1
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  host: nettool1.apps.openshift.hauajoe.eu
  port:
    targetPort: 1180    
---      
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-nettool2
  namespace: test-network2
  labels:
    app.kubernetes.io/instance: nettool2
spec:
  to:
    kind: Service
    name: service-nettool2
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  host: nettool2.apps.openshift.hauajoe.eu
  port:
    targetPort: 1180   
---      
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-nettool3
  namespace: test-network3
  labels:
    app.kubernetes.io/instance: nettool3
spec:
  to:
    kind: Service
    name: service-nettool3
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  host: nettool3.apps.openshift.hauajoe.eu
  port:
    targetPort: 1180
